--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 body {
     width: 100%;
     font-family: 'Ubuntu', 'sans-serif'; 
+    background-color: #23272A;
+    color: #f5f5f5;
 }
 
 h1 {
@@ -15,87 +17,89 @@ h1 {
 }
 
 #body {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    width: 100%;
 }
 
-#section {
-    width: 100%;
-}
-
-#formula {
-    width: fit-content;
-    border: 2px solid rgb(17, 199, 99);  
-    border-radius: 10px;
-    margin-left: 520px;  
-    padding: 10px;
+#part {
+    width: 70%;
+    text-align: center;
 }
 
 #description {
-    padding: 0 20px 30px;
+    max-width: 720px;
+    margin: auto;
+    padding: 20px 20px 40px;
 }
 
-#half {
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    width: 100%;
-}
-
-#half img {
+#section h3 {
+    border: 2px solid #f5f5f5;
+    border-radius: 10px;
+    padding: 10px;
     width: 300px;
-    margin-top: 90px;
-
-}
-
-#half h3 {
-    padding: 10px 0 10px ;
-}
-
-#half p {
-    padding: 10px 0 ;
-
+    margin: auto;
 }
 
 #image {
-    width: 50%;
+    /* width: 30%; */
+    text-align: center;
+}
+
+img {
+    width: 300px;
+    /* margin-right: 20px; */
 }
 
 #calculator {
-    width: 50%;
+    margin-top: 15px;
+    width: 100%;
     text-align: center;
-    margin-top: 60px;
-    margin-right: 20px;
-    background-color: rgb(214, 214, 214);
     border-radius: 20px;
+    margin-bottom: 50px;
+
 }
 
 input {
-    border-radius: 3px;
+    border-radius: 5px;
+    opacity: 0.9;
 }
 
 #calculator p {
     padding: 0 0 20px;
 }
 
-.co {
+.container:nth-child(2) {
     margin-left: -32px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
-.ca {
+.container:nth-child(3) {
     margin-left: -50px;
     margin-bottom: 20px;
 }
 
+.container .input {
+    height: 35px;
+    width: 200px;
+    padding: 15px;
+    font-size: 14px;
+}
+
 button {
-    background: rgb(17, 199, 99);
-    border: rgb(17, 199, 99);
-    border-style: outset;
-    width: 100px;
-    height: 40px;
-    border-radius: 10px;
+    background: #f5f5f5;
+    border: #f5f5f5;
+    width: 120px;
+    height: 50px;
+    border-radius: 5px;
     margin-bottom: 10px;
+    opacity: 0.9;
+    font-size: 14px;
+    transition: filter 0.5s;
+}
+
+button:hover {
+    cursor: pointer;
+    filter: brightness(0.8);
 }
