--- a/style.css
+++ b/style.css
@@ -87,6 +87,27 @@ input {
     font-size: 14px;
 }
 
+.load {
+    display: none;
+    justify-content: center;
+
+    padding-bottom: 20px;
+}
+
+.loader {
+    border: 5px solid #404346;
+    border-radius: 50%;
+    border-top: 5px solid #f5f5f5;
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 button {
     background: #f5f5f5;
     border: #f5f5f5;
