--- a/style.css
+++ b/style.css
@@ -87,13 +87,6 @@ input {
     font-size: 14px;
 }
 
-.load {
-    display: none;
-    justify-content: center;
-
-    padding-bottom: 20px;
-}
-
 .loader {
     border: 5px solid #404346;
     border-radius: 50%;
@@ -101,8 +94,15 @@ input {
     width: 30px;
     height: 30px;
     animation: spin 2s linear infinite;
+    visibility: hidden;
+    margin: 20px auto;
+    
   }
-  
+
+.loader.display {
+    visibility: visible;
+}
+
   @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
